exports[`Video has correct default options 1`] = `
<div
  className="grommetux-video"
  onMouseMove={[Function bound _onMouseMove]}>
  <video
    autoPlay={false}
    loop={false}
    muted={false}
    onAbort={[Function anonymous]}
    onCanPlay={[Function anonymous]}
    onCanPlayThrough={[Function anonymous]}
    onDurationChange={[Function anonymous]}
    onEmptied={[Function anonymous]}
    onEncrypted={[Function anonymous]}
    onEnded={[Function anonymous]}
    onError={[Function anonymous]}
    onLoadStart={[Function anonymous]}
    onLoadedData={[Function anonymous]}
    onLoadedMetadata={[Function anonymous]}
    onPause={[Function anonymous]}
    onPlay={[Function anonymous]}
    onPlaying={[Function anonymous]}
    onProgress={[Function anonymous]}
    onRateChange={[Function anonymous]}
    onSeeked={[Function anonymous]}
    onSeeking={[Function anonymous]}
    onStalled={[Function anonymous]}
    onSuspend={[Function anonymous]}
    onTimeUpdate={[Function anonymous]}
    onVolumeChange={[Function anonymous]}
    onWaiting={[Function anonymous]}
    poster={undefined}>
    <source
      src="/video/test.mp4"
      type="video/mp4" />
  </video>
  <div>
    <div
      className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-none grommetux-video__overlay"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}>
      <div
        className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-none"
        id={undefined}
        onClick={undefined}
        role={undefined}
        style={Object {}}
        tabIndex={undefined}>
        <button
          aria-label="Play Video"
          className="grommetux-button grommetux-button--primary grommetux-button--plain grommetux-button--icon grommetux-video__play"
          disabled={false}
          href={undefined}
          id={undefined}
          onBlur={[Function onBlur]}
          onClick={[Function bound _togglePlay]}
          onFocus={[Function onFocus]}
          onMouseDown={[Function onMouseDown]}
          onMouseUp={[Function onMouseUp]}
          type="button">
          <span
            className="grommetux-button__icon">
            <svg
              aria-label="play"
              className="grommetux-control-icon grommetux-control-icon-play grommetux-control-icon--large grommetux-control-icon--responsive"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px">
              <polygon
                fill="none"
                points="3 22 21 12 3 2"
                stroke="#000000"
                strokeWidth="2" />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none"
        id={undefined}
        onClick={undefined}
        role={undefined}
        style={Object {}}
        tabIndex={undefined} />
    </div>
  </div>
</div>
`;

exports[`Video transfers arbitrary props 1`] = `
<div
  className="grommetux-video"
  onMouseMove={[Function bound _onMouseMove]}>
  <video
    autoPlay={false}
    data-flavor="coconut"
    loop={false}
    muted={false}
    onAbort={[Function anonymous]}
    onCanPlay={[Function anonymous]}
    onCanPlayThrough={[Function anonymous]}
    onDurationChange={[Function anonymous]}
    onEmptied={[Function anonymous]}
    onEncrypted={[Function anonymous]}
    onEnded={[Function anonymous]}
    onError={[Function anonymous]}
    onLoadStart={[Function anonymous]}
    onLoadedData={[Function anonymous]}
    onLoadedMetadata={[Function anonymous]}
    onPause={[Function anonymous]}
    onPlay={[Function anonymous]}
    onPlaying={[Function anonymous]}
    onProgress={[Function anonymous]}
    onRateChange={[Function anonymous]}
    onSeeked={[Function anonymous]}
    onSeeking={[Function anonymous]}
    onStalled={[Function anonymous]}
    onSuspend={[Function anonymous]}
    onTimeUpdate={[Function anonymous]}
    onVolumeChange={[Function anonymous]}
    onWaiting={[Function anonymous]}
    poster={undefined}>
    <source
      src="/video/test.mp4"
      type="video/mp4" />
  </video>
  <div>
    <div
      className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-none grommetux-video__overlay"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}>
      <div
        className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-none"
        id={undefined}
        onClick={undefined}
        role={undefined}
        style={Object {}}
        tabIndex={undefined}>
        <button
          aria-label="Play Video"
          className="grommetux-button grommetux-button--primary grommetux-button--plain grommetux-button--icon grommetux-video__play"
          disabled={false}
          href={undefined}
          id={undefined}
          onBlur={[Function onBlur]}
          onClick={[Function bound _togglePlay]}
          onFocus={[Function onFocus]}
          onMouseDown={[Function onMouseDown]}
          onMouseUp={[Function onMouseUp]}
          type="button">
          <span
            className="grommetux-button__icon">
            <svg
              aria-label="play"
              className="grommetux-control-icon grommetux-control-icon-play grommetux-control-icon--large grommetux-control-icon--responsive"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px">
              <polygon
                fill="none"
                points="3 22 21 12 3 2"
                stroke="#000000"
                strokeWidth="2" />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none"
        id={undefined}
        onClick={undefined}
        role={undefined}
        style={Object {}}
        tabIndex={undefined} />
    </div>
  </div>
</div>
`;
